/*
Dear Programmers,

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*                                                 *
*	This file belongs to Kevin Veros Hamonangan   *
*	and	Fandi Fladimir Dachi and is a part of     *
*	our	last project as the student of Del        *
*	Institute of Technology, Sitoluama.           *
*	Please contact us via Instagram:              *
*	sleepingnext and fandi_dachi                  *
*	before copying this file.                     *
*	Thank you, buddy. ðŸ˜Š                          *
*                                                 *
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

syntax = "proto3";

package com.ta04.srv.user;

message User {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string username = 4;
    int32 password = 5;
    int32 prime_number = 6;
    int32 generator_value = 7;
    string email_address = 8;
    string phone_number = 9;
    string date_of_birth = 10;
    string address = 11;
    string role = 12;
    string status = 13;
}

message IndexUsersRequest{}

message Response {
    User user = 1;
    repeated User users = 2;
    Error error = 3;
}

message Error {
    string code = 1;
    string message = 2;
}

service UserService {
    rpc IndexUsers(IndexUsersRequest) returns (Response) {}

    rpc ShowUser(User) returns (Response) {}

    rpc ShowUserByUsername(User) returns (Response) {}

    rpc ShowUserCredentialsByUsername(User) returns (Response) {}

    rpc StoreUser(User) returns (Response) {}

    rpc UpdateUser(User) returns (Response) {}

    rpc DestroyUser(User) returns (Response) {}
}